--- a/photo.html
+++ b/photo.html
@@ -6,5 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo</title>
   </head>
-  <body></body>
+  <body>
+    <h1>🥐 A picture of croissant</h1>
+    <img
+      src="src/photo/croissant.png"
+      alt="Homemade croissant"
+      class="photo-croissant"
+    />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4"><a href="/">Homepage</a></div>
+        <div class="col-md-4">
+          <a href="/photo.html" title="croissant photo">Photo</a>
+        </div>
+        <div class="col-md-4"><a href="/contact.html">Contact</a></div>
+      </div>
+    </div>
+  </body>
 </html>
