--- a/contact.html
+++ b/contact.html
@@ -17,5 +17,22 @@
     ></script>
     <title>Contact</title>
   </head>
-  <body></body>
+  <body>
+    <h1>🥐 Contact us</h1>
+    <p>
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com" class="email-link"
+        >hello@croissant.com</a
+      >
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4"><a href="/">Homepage</a></div>
+        <div class="col-md-4">
+          <a href="/photo.html" title="croissant photo">Photo</a>
+        </div>
+        <div class="col-md-4"><a href="/contact.html">Contact</a></div>
+      </div>
+    </div>
+  </body>
 </html>
