--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <a href="/">Homepage</a>
-    <a href="/photo.html" title="croissant photo">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4"><a href="/">Homepage</a></div>
+        <div class="col-md-4">
+          <a href="/photo.html" title="croissant photo">Photo</a>
+        </div>
+        <div class="col-md-4"><a href="/contact.html">Contact</a></div>
+      </div>
+    </div>
   </body>
 </html>
