--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,11 @@
       >
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col-md-4"><a href="/">Homepage</a></div>
-        <div class="col-md-4">
-          <a href="/photo.html" title="croissant photo">Photo</a>
-        </div>
-        <div class="col-md-4"><a href="/contact.html">Contact</a></div>
-      </div>
+      <span class="links"><a href="/">Homepage</a></span>
+      <span class="links">
+        <a href="/photo.html" title="croissant photo">Photo</a>
+      </span>
+      <span class="links"><a href="/contact.html">Contact</a></span>
     </div>
   </body>
 </html>
