aplied css to the img

--- a/photo.html
+++ b/photo.html
@@ -15,6 +15,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+
     <link href="src/style.css" rel="stylesheet" type="text/css" />
     <title>Photo</title>
   </head>
@@ -23,7 +24,7 @@
     <img
       src="src/photo/croissant.png"
       alt="Homemade croissant"
-      class="photo-croissant"
+      class="img-fluid border rounded m-25 shadow"
     />
     <div class="container">
       <span class="links"><a href="/">Homepage</a></span>
