added titles to the links

--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,13 @@
       >
     </p>
     <div class="container">
-      <span class="links"><a href="/">Homepage</a></span>
+      <span class="links"><a href="/" title="Homepage">Homepage</a></span>
       <span class="links">
         <a href="/photo.html" title="croissant photo">Photo</a>
       </span>
-      <span class="links"><a href="/contact.html">Contact</a></span>
+      <span class="links"
+        ><a href="/contact.html" title="Contact croissant.com">Contact</a></span
+      >
     </div>
   </body>
 </html>
