--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
     <link href="src/style.css" rel="stylesheet" type="text/css" />
-    <title>Croissant</title>
+    <title>The best croissant recipes</title>
   </head>
   <body>
     <h1>🥐 Croissant 🥐</h1>
@@ -32,11 +32,13 @@
       are made of a layered yeast-leavened dough
     </p>
     <div class="container">
-      <span class="links"><a href="/">Homepage</a></span>
+      <span class="links"><a href="/" title="Homepage">Homepage</a></span>
       <span class="links">
         <a href="/photo.html" title="croissant photo">Photo</a>
       </span>
-      <span class="links"><a href="/contact.html">Contact</a></span>
+      <span class="links"
+        ><a href="/contact.html" title="Contact croissant.com">Contact</a></span
+      >
     </div>
   </body>
 </html>
