--- a/photo.html
+++ b/photo.html
@@ -32,11 +32,13 @@
       class="img-fluid border rounded m-25 shadow"
     />
     <div class="container">
-      <span class="links"><a href="/">Homepage</a></span>
+      <span class="links"><a href="/" title="Homepage">Homepage</a></span>
       <span class="links">
         <a href="/photo.html" title="croissant photo">Photo</a>
       </span>
-      <span class="links"><a href="/contact.html">Contact</a></span>
+      <span class="links"
+        ><a href="/contact.html" title="Contact croissant.com">Contact</a></span
+      >
     </div>
   </body>
 </html>
